examples/test/testpolicy18047.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18047
  namespace: namespace382
spec:
  podSelector:
    matchLabels:
      key36: value20
      key0: value19
      key15: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value36
      podSelector:
        matchLabels:
          key46: value43
          key43: value18
          key30: value11
